@@ -1,3 +1,10 @@
+2001-03-03  David O'Brien  <obrien@FreeBSD.org>
+	
+	from 2000-09-06  Zack Weinberg  <zack@wolery.cumb.org>
+	* c-parse.gperf, c-gperf.h: Delete.
+	(c-gperf.h was accidently re-added to the CVS repo in the rev 1.16 commit
+	by tromey)
+
 2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpplex.c (_cpp_lex_token): Don't warn about directives in
